applications/secretpass/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secretpass-ingress
  namespace: secretpass
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/preserve-host: "true"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - secretpass.spider-shlomo.com
    secretName: secretpass-app-tls
  rules:
  - host: secretpass.spider-shlomo.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-svc
              port:
                number: 3000
                
        - path: /remote/saml/
          pathType: Prefix
          backend:
            service:
              name: backend-svc
              port:
                number: 5050

        - path: /api/
          pathType: Prefix
          backend:
            service:
              name: backend-svc
              port:
                number: 5050
